--- a/core/views/partials/header.ejs
+++ b/core/views/partials/header.ejs
@@ -15,6 +15,8 @@
                 <li><a href="/login">Ingresa <i class="fas fa-sign-in-alt"></i></a></li>
                 <li><a href="/cart">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
                 <li><a href="/products/new">Agregar producto <i class="fas fa-shopping-basket"></i></a></li>
+                <li><a href="/products/edit">Editar <i class="fas fa-shopping-basket"></i></a></li>
+
             </ul>
         </div>
     </div>
