--- a/core/views/producto/productDetail.ejs
+++ b/core/views/producto/productDetail.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class ="Product-Detail-Body">
-        <div class ="Product-Detail-Header">
+        <div class = "Header">
             <%- include ('../partials/header') %>
         </div>
         
@@ -20,7 +20,6 @@
             </div>
 
             <div class="Product-Detail-Cont-Detalle">
-                
                 <h2 class="titulo-detalle">Detalle del Producto</h2>
                 <h4 class="description">Termo TERMOLAR Dupla de acero inoxidable 1L </h4>
                 <p class="price">$5.000 </p>
@@ -36,7 +35,7 @@
 
         </div>
 
-        <div class ="Product-Detail-Footer">
+        <div class ="Footer">
             <%- include ('../partials/footer') %>
         </div>
     </div>
