--- a/core/views/usuario/login.ejs
+++ b/core/views/usuario/login.ejs
@@ -11,7 +11,7 @@
 
     
 <body>
-    <div class = "Login-Header">
+    <div class = "Header">
         <%- include ('../partials/header') %>
     </div>
 
@@ -35,7 +35,7 @@
         </main>
     </div>
 
-    <div class ="Login-Footer">
+    <div class ="Footer">
         <%- include ('../partials/footer') %>
     </div>
     
