--- a/core/views/usuario/registro.ejs
+++ b/core/views/usuario/registro.ejs
@@ -12,7 +12,7 @@
 
 <body>
 
-    <div class ="Register-Header">
+    <div class ="Header">
         <%- include ('../partials/header') %>
     </div>
 
@@ -38,7 +38,7 @@
             </main>
     </div>
 
-    <div class ="Register-Footer">
+    <div class ="Footer">
         <%- include ('../partials/footer') %>
     </div>
 
