--- a/core/views/usuario/home.ejs
+++ b/core/views/usuario/home.ejs
@@ -13,47 +13,52 @@
 
 <body>
     
-    <%- include ('../partials/header') %>
+    <div class = "Header">
+        <%- include ('../partials/header') %>
+    </div>
+    
+    <div class = "Home-Cont-Main">
+        <main class="Home-Main">
+            <h3 class="Home-Section-Title">Ofertas</h3>
+            <section class="Home-Cont-Articulos">
+                <article class="Home-Articulo">
+                    <img class="Home-Articulo-Imagenes" src="\images\termo-generico.webp" alt="termo">
+                    <p class="Home-Articulo-Price">$5.000 </p>
+                        <p class="Home-Articulo-Discount">20$ OFF</p>
+                        <h4 class="Home-Articulo-Description">Termo clásico</h4>
+                </article>
+                <article class=" Home-Articulo">
+                    <img class="Home-Articulo-Imagenes" src="\images\termo-y-mate-argentina.jpg" alt="termo">
+                    <p class="Home-Articulo-Price">$6.500 </p>
+                        <p class="Home-Articulo-Discount">15$ OFF</p>
+                        <h4 class="Home-Articulo-Description">Termo Argentino</h4>
+                </article>
+                <article class=" Home-Articulo">
+                    <img class="Home-Articulo-Imagenes" src="\images\mate-amplificador.webp" alt="mate">
+                    <p class="Home-Articulo-Price">$2.000 </p>
+                        <p class="Home-Articulo-Discount">15$ OFF</p>
+                        <h4 class="Home-Articulo-Description">Mate Amplificador</h4>
+                </article>
+                <article class=" Home-Articulo">
+                    <img class="Home-Articulo-Imagenes" src="\images\mate-boca.webp" alt="mate">
+                    <p class="Home-Articulo-Price">$2.000</p>
+                        <p class="Home-Articulo-Discount">15$ OFF</p>
+                        <h4 class="Home-Articulo-Description">Mate de Boca</h4>
+                </article>
+                <article class=" Home-Articulo">
+                    <img class="Home-Articulo-Imagenes" src="\images\mate-carpincho.webp" alt="mate">
+                    <p class="Home-Articulo-Price">$2.000</p>
+                        <p class="Home-Articulo-Discount">15$ OFF</p>
+                        <h4 class="Home-Articulo-Description">Mate Carpincho</h4>
+                </article>
+            </section>
+        </main>
+    </div>
 
-    <main class="main-section-home">
-        <h3 class="title-section-home">Ofertas</h3>
-<section class="contenedor-articulos-home">
-    <article class="articulos-home">
-        <img class="imagenes-home" src="\images\termo-generico.webp" alt="termo">
-        <p class="price-home">$5.000 </p>
-            <p class="discount-home">20$ OFF</p>
-            <h4 class="description-home">Termo clásico</h4>
-    </article>
-    <article class="articulos-home">
-        <img class="imagenes-home" src="\images\termo-y-mate-argentina.jpg" alt="termo">
-        <p class="price-home">$6.500 </p>
-            <p class="discount-home">15$ OFF</p>
-            <h4 class="description-home">Termo Argentino</h4>
-    </article>
-    <article class="articulos-home">
-        <img class="imagenes-home" src="\images\mate-amplificador.webp" alt="mate">
-        <p class="price-home">$2.000 </p>
-            <p class="discount-home">15$ OFF</p>
-            <h4 class="description-home">Mate Amplificador</h4>
-    </article>
-    <article class="articulos-home">
-        <img class="imagenes-home" src="\images\mate-boca.webp" alt="mate">
-        <p class="price-home">$2.000</p>
-            <p class="discount-home">15$ OFF</p>
-            <h4 class="description-home">Mate de Boca</h4>
-    </article>
-    <article class="articulos-home">
-        <img class="imagenes-home" src="\images\mate-carpincho.webp" alt="mate">
-        <p class="price-home">$2.000</p>
-            <p class="discount-home">15$ OFF</p>
-            <h4 class="description-home">Mate Carpincho</h4>
-    </article>
-
-</section>
-
-    </main>
-
-    <%- include ('../partials/footer') %>
+    <div class ="Footer">
+        <%- include ('../partials/footer') %>
+    </div>
+    
     
 </body>
 </html>
