--- a/core/views/usuario/home.ejs
+++ b/core/views/usuario/home.ejs
@@ -19,39 +19,64 @@
     
     <div class = "Home-Cont-Main">
         <main class="Home-Main">
-            <h3 class="Home-Section-Title">Ofertas</h3>
-            <section class="Home-Cont-Articulos">
-                <article class="Home-Articulo">
-                    <img class="Home-Articulo-Imagenes" src="\images\termo-generico.webp" alt="termo">
-                    <p class="Home-Articulo-Price">$5.000 </p>
-                        <p class="Home-Articulo-Discount">20$ OFF</p>
-                        <h4 class="Home-Articulo-Description">Termo clásico</h4>
-                </article>
-                <article class=" Home-Articulo">
-                    <img class="Home-Articulo-Imagenes" src="\images\termo-y-mate-argentina.jpg" alt="termo">
-                    <p class="Home-Articulo-Price">$6.500 </p>
-                        <p class="Home-Articulo-Discount">15$ OFF</p>
-                        <h4 class="Home-Articulo-Description">Termo Argentino</h4>
-                </article>
-                <article class=" Home-Articulo">
-                    <img class="Home-Articulo-Imagenes" src="\images\mate-amplificador.webp" alt="mate">
-                    <p class="Home-Articulo-Price">$2.000 </p>
-                        <p class="Home-Articulo-Discount">15$ OFF</p>
-                        <h4 class="Home-Articulo-Description">Mate Amplificador</h4>
-                </article>
-                <article class=" Home-Articulo">
-                    <img class="Home-Articulo-Imagenes" src="\images\mate-boca.webp" alt="mate">
-                    <p class="Home-Articulo-Price">$2.000</p>
-                        <p class="Home-Articulo-Discount">15$ OFF</p>
-                        <h4 class="Home-Articulo-Description">Mate de Boca</h4>
-                </article>
-                <article class=" Home-Articulo">
-                    <img class="Home-Articulo-Imagenes" src="\images\mate-carpincho.webp" alt="mate">
-                    <p class="Home-Articulo-Price">$2.000</p>
-                        <p class="Home-Articulo-Discount">15$ OFF</p>
-                        <h4 class="Home-Articulo-Description">Mate Carpincho</h4>
-                </article>
-            </section>
+            <div class = "Home-Cont-Section-Title">
+                <h3 class="Home-Section-Title">Ofertas</h3>
+            </div>
+            <div class ="Home-Cont-Section-Articulos">
+                <section class="Home-Cont-Articulos">
+
+                    <article class="Home-Articulo">
+                        <div class = "Home-Cont-Articulo-Imagen">
+                            <img class="Home-Articulo-Imagenes" src="\images\termo-generico.webp" alt="termo">
+                        </div>
+                        <div class ="Home-Cont-Articulo-texto">
+                            <p class="Home-Articulo-Price">$5.000 </p>
+                            <p class="Home-Articulo-Discount">20$ OFF</p>
+                            <h4 class="Home-Articulo-Description">Termo clásico</h4>
+                        </div>
+                    </article>
+                    <article class=" Home-Articulo">
+                        <div class = "Home-Cont-Articulo-Imagen">
+                            <img class="Home-Articulo-Imagenes" src="\images\termo-y-mate-argentina.jpg" alt="termo">
+                        </div>
+                        <div class ="Home-Cont-Articulo-texto">
+                            <p class="Home-Articulo-Price">$6.500 </p>
+                            <p class="Home-Articulo-Discount">15$ OFF</p>
+                            <h4 class="Home-Articulo-Description">Termo Argentino</h4>
+                        </div>
+                    </article>
+                    <article class=" Home-Articulo">
+                        <div class = "Home-Cont-Articulo-Imagen">
+                            <img class="Home-Articulo-Imagenes" src="\images\mate-amplificador.webp" alt="mate">
+                        </div>
+                        <div class ="Home-Cont-Articulo-texto">
+                            <p class="Home-Articulo-Price">$2.000 </p>
+                            <p class="Home-Articulo-Discount">15$ OFF</p>
+                            <h4 class="Home-Articulo-Description">Mate Amplificador</h4>
+                        </div>
+                        </article>
+                    <article class=" Home-Articulo">
+                        <div class = "Home-Cont-Articulo-Imagen">
+                            <img class="Home-Articulo-Imagenes" src="\images\mate-boca.webp" alt="mate">
+                        </div>
+                        <div class ="Home-Cont-Articulo-texto">
+                            <p class="Home-Articulo-Price">$2.000</p>
+                            <p class="Home-Articulo-Discount">15$ OFF</p>
+                            <h4 class="Home-Articulo-Description">Mate de Boca</h4>
+                        </div>
+                    </article>
+                    <article class=" Home-Articulo">
+                        <div class = "Home-Cont-Articulo-Imagen">
+                            <img class="Home-Articulo-Imagenes" src="\images\mate-carpincho.webp" alt="mate">
+                        </div>
+                        <div class ="Home-Cont-Articulo-texto">
+                            <p class="Home-Articulo-Price">$2.000</p>
+                            <p class="Home-Articulo-Discount">15$ OFF</p>
+                            <h4 class="Home-Articulo-Description">Mate Carpincho</h4>
+                        </div>
+                    </article>
+                </section>
+            </div>
         </main>
     </div>
 
