--- a/core/public/css/stylesheet.css
+++ b/core/public/css/stylesheet.css
@@ -1,8 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
 
-Header{display: flex; flex-direction: column; width: 100vw;}
-html{background: linear-gradient(to right, #8B7241, #453921);}
+/* ----------------------------- */
+/* ---------- BODY ---------- */
+body{
+    background-color: #909090;
+    margin: 0px;
+    padding: 0px;
+}
 
 /* ----------------------------- */
 /* ---------- HEADER ---------- */
@@ -11,14 +16,13 @@ html{background: linear-gradient(to right, #8B7241, #453921);}
     flex-direction: column;
 }
 
-Header{display: flex; flex-direction: column; width: 100vw;}
-html{background: linear-gradient(to right, #8B7241, #453921);}
 .Header-Cont-Barra{
     width: 100vw;
     display: flex; 
     flex-direction: row;
     justify-content: space-between; 
-    background-color: rgba(227,246,236,255);}
+    background-color: rgba(227,246,236,255);
+}
 
 .Header-Barra-Busqueda{
     align-self: center; 
@@ -49,19 +53,13 @@ html{background: linear-gradient(to right, #8B7241, #453921);}
     height: 6vh;
     padding-top: 3vh;
 }
-body{
-    margin: 0;
-    padding: 0;
-    background: linear-gradient(to bottom right, #8B7241, #453921);
-    position: relative;
-}
-Header{display: flex; flex-direction: column;}
+
 
 
 
 /*register css*/
 
-
+/*
 .barra-registro1{
     width: 100vw;
     display: flex; 
@@ -89,7 +87,7 @@ Header{display: flex; flex-direction: column;}
     margin: 0%;
     height: 6vh;
     padding-top: 3vh;
-}
+}*/
 
 /* ------------------------------- */
 /* ---------- REGISTER ---------- */
@@ -143,7 +141,7 @@ Header{display: flex; flex-direction: column;}
     height: 8vh;
     border-radius:  8px;
     border-color: #666;
-    background: linear-gradient(to bottom right, #C5E03E, #B3D161);
+    background: rgb(64, 191, 115);
     font-family: 'Roboto';
     font-weight: 600;
     color: #202020;
@@ -617,7 +615,7 @@ Header{display: flex; flex-direction: column;}
     width: 45%;
     height: 40px;
     border: none;
-    background: linear-gradient(to bottom right, #C5E03E, #B3D161);
+    background: rgb(64, 191, 115);
     border-radius: 20px;
     cursor: pointer;
     font-size: 16px;
@@ -676,7 +674,7 @@ Header{display: flex; flex-direction: column;}
     height: 8vh;
     border-radius:  8px;
     border-color: #666;
-    background: linear-gradient(to bottom right, #C5E03E, #B3D161);
+    background: rgb(64, 191, 115);
     font-family: 'Roboto';
     font-weight: 600;
     color: #202020;
@@ -691,8 +689,6 @@ Header{display: flex; flex-direction: column;}
 
 /* ---------------------------------- */
 /* ---------- USUARIO HOME ---------- */
-
-html{background: linear-gradient(to right, #8B7241, #453921);}
 
 Header{display: flex; flex-direction: column; width: 100%;}
 .barraHome1{
@@ -742,6 +738,15 @@ Header{display: flex; flex-direction: column; width: 100%;}
     height: 50%;
     align-items: center;
 }
+
+.Home-Cont-Main{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 0px;
+    padding: 0px;
+}
 .Home-Main{
     display: flex;
     flex-direction: column;
@@ -773,8 +778,8 @@ Header{display: flex; flex-direction: column; width: 100%;}
     height: 12vw;
 }
 
-.Home-Cont-Articulo-texto{
-    size: 1vw;
+.Home-Cont-Articulo-texto p{
+    size: 0.3vw;
 }
 .Home-Articulo-Price{
     font-size: 18px;
@@ -804,6 +809,7 @@ Header{display: flex; flex-direction: column; width: 100%;}
     border-top: solid 2px rgba(71,76,89,255);
     display: flex;
     flex-direction: column;
+    align-items: center;
     flex-wrap: wrap;
     margin-top: 2vw;
 }
@@ -814,10 +820,13 @@ Header{display: flex; flex-direction: column; width: 100%;}
 }
 
 .Cont_NcV{
+    width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    background-color: darkslategray;
+    padding-bottom: 15px;
 }
 .Cont_NcV h4 {
     color: rgb(64, 191, 115);
@@ -840,6 +849,7 @@ Header{display: flex; flex-direction: column; width: 100%;}
 .Cont_Con p{
     color: white;
     padding: 0vw;
+    margin:1px;
 }
 
 .Cont_Vis{
@@ -851,6 +861,7 @@ Header{display: flex; flex-direction: column; width: 100%;}
 .Cont_Vis p{
     color: white;
     padding: 0vw;
+    margin: 1px
 }
 
 .Cont_Linea_Sup{
@@ -861,36 +872,22 @@ Header{display: flex; flex-direction: column; width: 100%;}
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+    width: 100%;
+    background-color:rgba(71,76,89,255);
 }
 .Cont_PiePag p{
     color: white;
     padding: 0vw;
+    margin-left: 17.5vw;
 }
 .Cont_PiePag a{
     color: white;
     padding: 0vw;
+    margin-right: 17.5vw;
 }
-/*
-.contenedor-footer-home{
-    text-align: center;
-    }
-    .h4-footer-home{
-        font-size: 15px;
-        margin-bottom: 1px;
-        margin-top: 10px;
-    }
-    .p-footer-home{
-        margin-top: 2px;
-        margin-bottom: 25px;
-    }
-    .icono-footer-home{
-        font-size: 2em;
-        color: gray
-        ;
-        margin-bottom: 10px;
-    }*/
+
    
     
     
