--- a/core/views/partials/footer.ejs
+++ b/core/views/partials/footer.ejs
@@ -17,6 +17,11 @@
                 <p>Av.Senador Morón 600</p>
                 <p>Buenos Aires, Argentina.</p>
             </div>
+            <div class ="Cont_Seg">
+                <h4>SEGUINOS</h4>
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-instagram"></i>
+            </div>
         </div>
         <div class ="Cont_PiePag">
             <p>Copyright© 2022 MateAr S.A.</p>
