--- a/core/views/partials/header.ejs
+++ b/core/views/partials/header.ejs
@@ -2,7 +2,9 @@
     <link rel="stylesheet" href="/css/stylesheet.css">
     <div class ="Header_Cont">
         <div class="Header-Cont-Barra">
+            <div class="Logo">
             <img src="/images/logo-mat-ear.png" alt="Logo MateAr">
+        </div>
             <div class="Header-Barra-Busqueda">
                 <input type="text" name="search" placeholder="Buscar producto o marca" class="Header-Searchbar-Input" autocomplete="off">
             </div>
