--- a/core/views/usuario/home.ejs
+++ b/core/views/usuario/home.ejs
@@ -16,12 +16,31 @@
     <div class = "Header">
         <%- include ('../partials/header') %>
     </div>
-    
+    <div id="cont_items_carrousel">
+        <div class="itemCarrousel" id="item_carrousel_1">
+            <div class="tarjeta_carrousel" id="tarjeta_carrousel_1">A</div>
+            <div class="felchas_carrousel">
+                <a href="#tarjeta_carrousel_3"><i class="far fa-arrow-left"></i></a>
+                <a href="#tarjeta_carrousel_2"><i class="far fa-arrow-right"></i></a>
+            </div>
+        </div>
+        <div class="itemCarrousel" id="item_carrousel_2">
+            <div class="tarjeta_carrousel" id="tarjeta_carrousel_2">B</div>
+            <div class="felchas_carrousel">
+                <a href="#tarjeta_carrousel_1"><i class="far fa-arrow-left"></i></a>
+                <a href="#tarjeta_carrousel_3"><i class="far fa-arrow-right"></i></a>
+            </div>
+        </div>
+        <div class="itemCarrousel" id="item_carrousel_3">
+            <div class="tarjeta_carrousel" id="tarjeta_carrousel_3">C</div>
+            <div class="felchas_carrousel">
+                <a href="#tarjeta_carrousel_2"><i class="far fa-arrow-left"></i></a>
+                <a href="#tarjeta_carrousel_1"><i class="far fa-arrow-right"></i></a>
+            </div>
+        </div>
+    </div>
     <div class = "Home-Cont-Main">
         <main class="Home-Main">
-            <div class = "Home-Cont-Section-Title">
-                <h3 class="Home-Section-Title">Todos los productos</h3>
-            </div>
             <div class ="Home-Cont-Section-Articulos">
                 <section class="Home-Cont-Articulos">
                     <article class="Home-Articulo">
